# concord-rust

./: Cargo.toml  README.md
app/: package-lock.json  package.json
app/src/: App.tsx  index.tsx
app/src/components/Chat/: Container.tsx  MessageBubble.tsx  SendMessage.tsx
app/src/components/Login/: index.tsx
app/src/components/Sidebar/: index.tsx
app/src/models/: chat.ts  temp.ts  websocket.ts
servers/: Cargo.toml  db
servers/api/: Cargo.toml
servers/api/src/: db.rs  main.rs
servers/api/src/graphql/: schema.rs
servers/api/src/graphql/mutation/: mod.rs  user.rs
servers/api/src/graphql/query/: mod.rs  user.rs
servers/chat/: Cargo.toml
servers/chat/src/: main.rs
servers/chat/src/core/: message.rs  mod.rs
servers/entity/: Cargo.toml
servers/entity/src/: lib.rs  user.rs
servers/migration/src/: lib.rs  m20231014_214824_create_users_table.rs  main.rs
servers/service/: Cargo.toml
servers/service/src/: mutation.rs  query.rs
servers/src/: chat.rs  main.rs
servers/src/chat/: manager.rs  message.rs  mod.rs  peer.rs  room.rs
src/: chat.rs  main.rs
