[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
[[bin]]
name = "chat"
path = "src/main.rs" 

[dependencies]
service = { path = "../service" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
uuid = { workspace = true }


tokio-tungstenite = "*"
